--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     hostname: redis
     restart: always
     ports:
-      - "6380:6379"
+      - "6379:6379"
     volumes:
       - redis_data:/data
+    network_mode: "host"
 
   app:
     build:
@@ -16,13 +17,14 @@ services:
       dockerfile: Dockerfile.app
     restart: always
     ports:
-      - "1267:8000"
+      - "8000:8000"
     volumes:
       - .:/app
     depends_on:
       - redis
     env_file:
       - .env
+    network_mode: "host"
 
   worker:
     build:
@@ -36,6 +38,7 @@ services:
       - app
     env_file:
       - .env
+    network_mode: "host"
 
 volumes:
   redis_data:
